# general-tree

./: .gitignore  CMakeLists.txt  README.md  general-tree.h  general_tree.h
testing/: test.cpp
testing/classes/: node.test.cpp
testing/classes/const_iterator/constructors/: copy.constructor.test.cpp  iterator.constructor.test.cpp
testing/classes/const_iterator/operators/: assigment.operator.test.cpp  (+5 more)
testing/constructors/: copy.constructor.test.cpp  default.constructor.test.cpp  move.constructor.test.cpp  root.constructor.cpp  root.constructor.test.cpp
testing/fixtures/: move_semantics.fixture.h
testing/fixtures/include/: move_semantics.fixture.h
testing/fixtures/source/: move_semantics.fixture.cpp
testing/functions/: children_count.test.cpp  create_root.test.cpp  data.test.cpp  default_constructor.cpp  emplace_left_child.test.cpp  emplace_right_sibling.test.cpp  empty.test.cpp  height.cpp  insert_left_child.test.cpp
testing/helpers/include/: populated_tree.helper.h  test_resource.helper.h
testing/helpers/source/: populated_tree.helper.cpp  test_resource.helper.cpp
testing/methods/: clear.test.cpp  create_root.test.cpp  data.test.cpp  delete_left_child.test.cpp  delete_right_sibling.test.cpp  descendants_count.test.cpp  destroy.test.cpp  destructor.test.cpp  emplace_left_child.test.cpp  emplace_right_sibling.test.cpp  empty.test.cpp  insert_left_child.test.cpp  insert_right_sibling.test.cpp
testing/move_semantics/: constructor.ms.test.cpp  create_root.ms.test.cpp  emplace_left_child.ms.test.cpp  emplace_root.ms.test.cpp  insert_left_child.ms.test.cpp
testing/operators/: assigment.operator.test.cpp  equality.operator.test.cpp
(+25 files in other folders)
